tests/compile/invalid_type.stderr
error: Type must be auto, u8, u16, u32, u64 or u128
 --> tests/compile/invalid_type.rs:3:21
  |
3 | #[pack_bools(type = String)]
  |                     ^^^^^^
